--- a/css/history.css
+++ b/css/history.css
@@ -97,7 +97,25 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* Section Styles */
+section p {
+    width: 500px;
+    height: 800px;
+}
 
+/* Body Styles */
+/* Header Styles */
+/* Aside Styles */
+/* Nav Styles */
+/* footer */
+footer {
+    padding: 8px;
+    margin: 1px;
+    display: table;
+    width: 100%;
+    list-style-type: none;
+    text-align: center;
+}
 
 
 
