--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,44 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* Section Styles */
+html {}
+section p {
+    width: 500px;
+    height: 800px;
+}
+
+/* Body Styles */
+/* Header Styles */
+header>nav {
+    display: table;
+    width: 100%;
+}
+
+header>nav>ul {
+    display: table-row;
+    list-style-type: none;
+}
+
+header>nav>ul>li {
+    display: table-cell;
+    text-align: center;
+}
+
+/* Aside Styles */
+/* Nav Styles */
+/* footer */
+footer {
+    padding: 8px;
+    margin: 1px;
+    display: table;
+    width: 100%;
+    list-style-type: none;
+    text-align: center;
+}
+
+
+
 
 
 
@@ -143,7 +181,8 @@ textarea {
     padding: 0;
     position: absolute;
     width: 1px;
-    white-space: nowrap; /* 1 */
+    white-space: nowrap;
+    /* 1 */
 }
 
 /*
@@ -185,8 +224,10 @@ textarea {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
@@ -204,9 +245,9 @@ textarea {
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -217,11 +258,13 @@ textarea {
    ========================================================================== */
 
 @media print {
+
     *,
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster */
+        color: #000 !important;
+        /* Black prints faster */
         -webkit-box-shadow: none !important;
         box-shadow: none !important;
         text-shadow: none !important;
@@ -233,11 +276,11 @@ textarea {
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
 
     /*
@@ -253,6 +296,7 @@ textarea {
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
