--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ textarea {
    ========================================================================== */
 
 /* Section Styles */
-html {}
+
 section p {
     width: 500px;
     height: 800px;
@@ -123,14 +123,24 @@ header>nav>ul>li {
 
 /* Aside Styles */
 /* Nav Styles */
+header>nav>ul>li a:link,
+header>nav>ul>li a:visited {
+    text-decoration: none;
+}
+
+header>nav>ul>li a:hover,
+header>nav>ul>li a:active {
+    text-decoration: underline;
+}
+
 /* footer */
 footer {
     padding: 8px;
     margin: 1px;
-    display: table;
+    display: table-cell;
     width: 100%;
     list-style-type: none;
-    text-align: center;
+    text-align: bottom;
 }
 
 
