--- a/css/main.css
+++ b/css/main.css
@@ -100,8 +100,12 @@ textarea {
 /* Section Styles */
 
 section p {
-    width: 500px;
+    width: 900px;
     height: 800px;
+}
+
+section p {
+    padding: 100;
 }
 
 /* Body Styles */
@@ -134,7 +138,7 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer {
+body>footer {
     padding: 8px;
     margin: 1px;
     display: table-cell;
