--- a/css/types.css
+++ b/css/types.css
@@ -100,8 +100,12 @@ textarea {
 
 /* Section Styles */
 section p {
-    width: 500px;
+    width: 900px;
     height: 800px;
+}
+
+section p {
+    padding: 100;
 }
 
 /* Body Styles */
@@ -134,13 +138,13 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer {
+body>footer {
     padding: 8px;
     margin: 1px;
-    display: table;
+    display: table-cell;
     width: 100%;
     list-style-type: none;
-    text-align: center;
+    text-align: bottom;
 }
 
 
