--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,25 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* Section Styles */
+/* general styles */
+
+html {
+    background-color:rgb(0, 64, 137);
+}
+
+body {
+    background-color: rgb(220, 220, 220);
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+header nav {
+    background-color: rgb(147, 147, 147);
+    padding-bottom: 10px;
+}
+
+
+   /* Section Styles */
 
 section p {
     width: 900px;
@@ -106,6 +124,12 @@ section p {
 
 section p {
     padding: 100;
+    margin-left: 30px;
+}
+
+section h1 {
+    padding-left: 15px;
+    padding-top: 0px;
 }
 
 /* Body Styles */
@@ -113,6 +137,7 @@ section p {
 header>nav {
     display: table;
     width: 100%;
+    padding-top: 20px;
 }
 
 header>nav>ul {
@@ -138,15 +163,21 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-body>footer {
-    padding: 8px;
-    margin: 1px;
-    display: table-cell;
-    width: 100%;
+footer {
+    padding: 20px;
+    margin-right: 0px;
+    /* display: table-cell; */
+    width: 97%;
     list-style-type: none;
-    text-align: bottom;
+background-color: rgb(147, 147, 147);
 }
 
+footer a {
+padding-left: 161px;
+padding-right: 65px;
+/* margin-right: 60px; */
+
+}
 
 
 
