--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ textarea {
 /* general styles */
 
 html {
-    background-color:rgb(0, 64, 137);
+    background-color: rgb(0, 64, 137);
 }
 
 body {
@@ -115,7 +115,7 @@ header nav {
 }
 
 
-   /* Section Styles */
+/* Section Styles */
 
 section p {
     width: 900px;
@@ -164,18 +164,18 @@ header>nav>ul>li a:active {
 
 /* footer */
 footer {
-    padding: 20px;
+    padding: 3vh;
     margin-right: 0px;
-    /* display: table-cell; */
+    display: table-cell;
     width: 97%;
     list-style-type: none;
-background-color: rgb(147, 147, 147);
+    background-color: rgb(147, 147, 147);
 }
 
 footer a {
-padding-left: 161px;
-padding-right: 65px;
-/* margin-right: 60px; */
+    padding-left: 161px;
+    padding-right: 65px;
+    /* margin-right: 60px; */
 
 }
 
