--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ body {
 
 header nav {
     background-color: rgb(147, 147, 147);
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
 }
 
 
@@ -125,11 +125,14 @@ section p {
 section p {
     padding: 100;
     margin-left: 30px;
+    font-size: 1.1vw;
+    font-size: 2vh;
+    margin-right: 30px;
 }
 
 section h1 {
-    padding-left: 15px;
-    padding-top: 0px;
+    /* padding-left: 15px;
+    padding-top: 0px; */
 }
 
 /* Body Styles */
@@ -137,7 +140,7 @@ section h1 {
 header>nav {
     display: table;
     width: 100%;
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 
 header>nav>ul {
@@ -163,20 +166,18 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer {
-    padding: 3vh;
-    margin-right: 0px;
-    display: table-cell;
-    width: 97%;
+footer>nav>ul {
+    display: table-row;
     list-style-type: none;
-    background-color: rgb(147, 147, 147);
 }
 
-footer a {
-    padding-left: 161px;
-    padding-right: 65px;
-    /* margin-right: 60px; */
+footer>nav>ul>li {
+    display: table-cell;
+    text-align: center;
+}
 
+footer nav {
+    background-color: rgb(147, 147, 147);
 }
 
 
