--- a/css/main.css
+++ b/css/main.css
@@ -117,12 +117,12 @@ header nav {
 
 /* Section Styles */
 
-section p {
+article p {
     width: 900px;
     height: 800px;
 }
 
-section p {
+article p {
     padding: 100;
     margin-left: 30px;
     font-size: 1.1vw;
@@ -130,7 +130,7 @@ section p {
     margin-right: 30px;
 }
 
-section h1 {
+article h1 {
     /* padding-left: 15px;
     padding-top: 0px; */
 }
