--- a/css/antivirus.css
+++ b/css/antivirus.css
@@ -97,21 +97,68 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* Section Styles */
-section p {
-    width: 900px;
-    height: 800px;
+/* general styles */
+
+
+html {
+    background-color: rgb(0, 64, 137);
+    
+    
 }
 
-section p {
-    padding: 100;
+body {
+    background-color: rgb(220, 220, 220);
+    margin-left: 5vw;
+    margin-right: 5vw;
+   
+}
+
+
+
+/* Article Styles */
+
+body article>p {
+    width: 65vw;
+    height: 90vh;}
+body article>p
+{
+    padding-top: 0px; 
+    padding-right:60px;
+    padding-bottom: 0px;
+    padding-left: 5px;
+    margin-left: 15px;
+    font-size: 2vw;
+    font-size: 2vh;
+   /* font-size: 2px;  */
+    /* margin-right: 30px; */
+}
+
+article h1 {
+    padding-left: 15px;
+    padding-top: 0px;
+    text-decoration: underline;
+}
+article h2 {
+    text-align: center;
+    text-decoration: underline;
 }
 
 /* Body Styles */
+p:nth-of-type(1n) {
+    text-indent: 5vw;
+}
+
+p:nth-of-type(2n) {
+    text-indent: 5vw;
+}
 /* Header Styles */
 header>nav {
     display: table;
     width: 100%;
+    background-color: rgb(147, 147, 147);
+    font-size: 2vh;
+    font-size: 2vw;
+    /* padding: 5em; */
 }
 
 header>nav>ul {
@@ -137,20 +184,29 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-body>footer {
-    padding: 8px;
-    margin: 1px;
-    display: table-cell;
-    width: 100%;
+footer>nav>ul {
+    display: table-row;
     list-style-type: none;
-    text-align: bottom;
+}
+
+footer>nav>ul>li {
+    display: table-cell;
+    text-align: center;
 }
 
 
 
+footer nav {
+    background-color: rgb(147, 147, 147);
+    width: 100%;
+}
 
-
-
+article img {    
+    width: 20%;
+    height: 20%;
+    margin-bottom: 30px;
+    padding-left: 200px;
+}
 
 
 
