--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
-@charset "utf-8";
-@viewport {
+/* @charset "utf-8"; */
+/* @viewport {
     width: auto;
     height: auto;
     
-}
+} */
 /*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
@@ -119,40 +119,52 @@ body {
    
 }
 
-header nav {
-    background-color: rgb(147, 147, 147);
-    /* padding-bottom: 10px; */
-}
 
 
 /* Article Styles */
 
 body article>p {
-    width: 75vw;
-    height: 50vh;}
+    width: 80vw;
+    height: 30vh;}
 body article>p
 {
     padding-top: 10px; 
     padding-right:60px;
-    padding-bottom: 10px;
+    padding-bottom: 3px;
     padding-left: 5px;
-    /* margin-left: 30px; */
-    font-size: 0.9em;
+    margin-left: 15px;
+    font-size: 2vw;
+    font-size: 2vh;
    /* font-size: 2px;  */
     /* margin-right: 30px; */
 }
 
 article h1 {
-    /* padding-left: 15px;
-    padding-top: 0px; */
+    padding-left: 15px;
+    padding-top: 0px;
+    text-decoration: underline;
+}
+article h2 {
+    text-align: center;
+    text-decoration: underline;
 }
 
 /* Body Styles */
+p:nth-of-type(1n) {
+    text-indent: 5vw;
+}
+
+p:nth-of-type(2n) {
+    text-indent: 5vw;
+}
 /* Header Styles */
 header>nav {
     display: table;
     width: 100%;
-    /* padding-top: 20px; */
+    background-color: rgb(147, 147, 147);
+    font-size: 2vh;
+    font-size: 2vw;
+    /* padding: 5em; */
 }
 
 header>nav>ul {
@@ -188,19 +200,19 @@ footer>nav>ul>li {
     text-align: center;
 }
 
+
+
 footer nav {
     background-color: rgb(147, 147, 147);
+    width: 100%;
 }
 
-
-
-
-
-
-
-
-
-
+img {    
+    width: 90%;
+    height: 90%;
+    margin-bottom: 30px;
+    padding-left: 5px;
+}
 
 
 
