--- a/css/antivirus.css
+++ b/css/antivirus.css
@@ -102,15 +102,15 @@ textarea {
 
 html {
     background-color: rgb(0, 64, 137);
-    
-    
+
+
 }
 
 body {
     background-color: rgb(220, 220, 220);
     margin-left: 5vw;
     margin-right: 5vw;
-   
+
 }
 
 
@@ -119,28 +119,30 @@ body {
 
 body article>p {
     width: 65vw;
-    height: 90vh;}
-body article>p
-{
-    padding-top: 0px; 
-    padding-right:60px;
+    height: 35vh;
+}
+
+body article>p {
+    padding-top: 0px;
+    padding-right: 60px;
     padding-bottom: 0px;
     padding-left: 5px;
     margin-left: 15px;
-    font-size: 2vw;
-    font-size: 2vh;
-   /* font-size: 2px;  */
+    font-size: 2.3vw;
+    font-size: 2.8vh;
+    /* font-size: 2px;  */
     /* margin-right: 30px; */
 }
 
 article h1 {
     padding-left: 15px;
     padding-top: 0px;
-    text-decoration: underline;
+
 }
+
 article h2 {
     text-align: center;
-    text-decoration: underline;
+
 }
 
 /* Body Styles */
@@ -151,6 +153,7 @@ p:nth-of-type(1n) {
 p:nth-of-type(2n) {
     text-indent: 5vw;
 }
+
 /* Header Styles */
 header>nav {
     display: table;
@@ -176,6 +179,7 @@ header>nav>ul>li {
 header>nav>ul>li a:link,
 header>nav>ul>li a:visited {
     text-decoration: none;
+    color: lavender;
 }
 
 header>nav>ul>li a:hover,
@@ -184,7 +188,7 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer>nav>ul {
+/* footer>nav>ul {
     display: table-row;
     list-style-type: none;
 }
@@ -192,16 +196,16 @@ footer>nav>ul {
 footer>nav>ul>li {
     display: table-cell;
     text-align: center;
-}
+} */
 
 
 
-footer nav {
+/* footer nav {
     background-color: rgb(147, 147, 147);
     width: 100%;
-}
+} */
 
-article img {    
+article img {
     width: 20%;
     height: 20%;
     margin-bottom: 30px;
