--- a/css/history.css
+++ b/css/history.css
@@ -96,17 +96,17 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   html {
+html {
     background-color: rgb(0, 64, 137);
-    
-    
+
+
 }
 
 body {
     background-color: rgb(220, 220, 220);
     margin-left: 5vw;
     margin-right: 5vw;
-   
+
 }
 
 
@@ -115,29 +115,31 @@ body {
 
 body article>p {
     width: 80vw;
-    height: 33vh;}
-body article>p
-{
-    padding-top: 20px; 
-    padding-right:60px;
+    height: 33vh;
+}
+
+body article>p {
+    padding-top: 20px;
+    padding-right: 60px;
     padding-bottom: 30px;
     padding-left: 5px;
     margin-left: 15px;
-    font-size: 2vw;
-    font-size: 2vh;
+    font-size: 2.3vw;
+    font-size: 2.8vh;
     /* font-size: ; */
-   /* font-size: 2px;  */
+    /* font-size: 2px;  */
     /* margin-right: 30px; */
 }
 
 article h1 {
     padding-left: 15px;
     padding-top: 0px;
-    text-decoration: underline;
+
 }
+
 article h2 {
     text-align: center;
-    text-decoration: underline;
+
 }
 
 /* Body Styles */
@@ -148,6 +150,7 @@ p:nth-of-type(1n) {
 p:nth-of-type(2n) {
     text-indent: 5vw;
 }
+
 /* Header Styles */
 header>nav {
     display: table;
@@ -173,6 +176,7 @@ header>nav>ul>li {
 header>nav>ul>li a:link,
 header>nav>ul>li a:visited {
     text-decoration: none;
+    color: lavender;
 }
 
 header>nav>ul>li a:hover,
@@ -181,7 +185,7 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer>nav>ul {
+/* footer>nav>ul {
     display: table-row;
     list-style-type: none;
 }
@@ -189,17 +193,17 @@ footer>nav>ul {
 footer>nav>ul>li {
     display: table-cell;
     text-align: center;
-}
+} */
 
 
 
-footer nav {
+/* footer nav {
     background-color: rgb(147, 147, 147);
     width: 100%;
     margin-top: 20px;
-}
+} */
 
-img {    
+img {
     width: 25%;
     height: 25%;
     margin-bottom: 30px;
