--- a/css/main.css
+++ b/css/main.css
@@ -108,15 +108,15 @@ textarea {
 
 html {
     background-color: rgb(0, 64, 137);
-    
-    
+
+
 }
 
 body {
     background-color: rgb(220, 220, 220);
     margin-left: 5vw;
     margin-right: 5vw;
-   
+
 }
 
 
@@ -125,28 +125,29 @@ body {
 
 body article>p {
     width: 80vw;
-    height: 30vh;}
-body article>p
-{
-    padding-top: 10px; 
-    padding-right:60px;
+    height: 30vh;
+}
+
+body article>p {
+    padding-top: 10px;
+    padding-right: 60px;
     padding-bottom: 3px;
     padding-left: 5px;
     margin-left: 15px;
-    font-size: 2vw;
-    font-size: 2vh;
-   /* font-size: 2px;  */
+    font-size: 2.3vw;
+    font-size: 2.8vh;
+    /* font-size: 2px;  */
     /* margin-right: 30px; */
 }
 
 article h1 {
     padding-left: 15px;
     padding-top: 0px;
-    text-decoration: underline;
+
 }
+
 article h2 {
     text-align: center;
-    text-decoration: underline;
 }
 
 /* Body Styles */
@@ -157,6 +158,7 @@ p:nth-of-type(1n) {
 p:nth-of-type(2n) {
     text-indent: 5vw;
 }
+
 /* Header Styles */
 header>nav {
     display: table;
@@ -182,6 +184,7 @@ header>nav>ul>li {
 header>nav>ul>li a:link,
 header>nav>ul>li a:visited {
     text-decoration: none;
+    color: lavender;
 }
 
 header>nav>ul>li a:hover,
@@ -190,7 +193,7 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer>nav>ul {
+/* footer>nav>ul {
     display: table-row;
     list-style-type: none;
 }
@@ -198,16 +201,16 @@ footer>nav>ul {
 footer>nav>ul>li {
     display: table-cell;
     text-align: center;
-}
+} */
 
 
 
-footer nav {
+/* footer nav {
     background-color: rgb(147, 147, 147);
     width: 100%;
-}
+} */
 
-img {    
+img {
     width: 90%;
     height: 90%;
     margin-bottom: 30px;
