--- a/css/types.css
+++ b/css/types.css
@@ -99,17 +99,17 @@ textarea {
 
 
 
-   html {
+html {
     background-color: rgb(0, 64, 137);
-    
-    
+
+
 }
 
 body {
     background-color: rgb(220, 220, 220);
     margin-left: 5vw;
     margin-right: 5vw;
-   
+
 }
 
 
@@ -118,28 +118,30 @@ body {
 
 body article>p {
     width: 80vw;
-    height: 60vh;}
-body article>p
-{
-    padding-top: 10px; 
-    padding-right:60px;
+    height: 60vh;
+}
+
+body article>p {
+    padding-top: 10px;
+    padding-right: 60px;
     padding-bottom: 3px;
     padding-left: 5px;
     margin-left: 15px;
-    font-size: 2vw;
-    font-size: 2vh;
-   /* font-size: 2px;  */
+    font-size: 2.3vw;
+    font-size: 2.8vh;
+    /* font-size: 2px;  */
     /* margin-right: 30px; */
 }
 
 article h1 {
     padding-left: 15px;
     padding-top: 0px;
-    text-decoration: underline;
+
 }
+
 article h2 {
     text-align: center;
-    text-decoration: underline;
+
 }
 
 /* Body Styles */
@@ -150,6 +152,7 @@ p:nth-of-type(1n) {
 p:nth-of-type(2n) {
     text-indent: 5vw;
 }
+
 /* Header Styles */
 header>nav {
     display: table;
@@ -172,8 +175,8 @@ header>nav>ul>li {
 
 /* list styles */
 section dl {
-    padding-top: 10px; 
-    padding-right:60px;
+    padding-top: 10px;
+    padding-right: 60px;
     padding-bottom: 3px;
     padding-left: 5px;
     margin-left: 15px;
@@ -188,6 +191,7 @@ section dl {
 header>nav>ul>li a:link,
 header>nav>ul>li a:visited {
     text-decoration: none;
+    color: lavender;
 }
 
 header>nav>ul>li a:hover,
@@ -196,7 +200,7 @@ header>nav>ul>li a:active {
 }
 
 /* footer */
-footer>nav>ul {
+/* footer>nav>ul {
     display: table-row;
     list-style-type: none;
 }
@@ -204,16 +208,16 @@ footer>nav>ul {
 footer>nav>ul>li {
     display: table-cell;
     text-align: center;
-}
+} */
 
 
 
-footer nav {
+/* footer nav {
     background-color: rgb(147, 147, 147);
     width: 100%;
-}
+} */
 
-img {    
+img {
     width: 90%;
     height: 90%;
     margin-bottom: 30px;
