--- a/css/types.css
+++ b/css/types.css
@@ -221,7 +221,8 @@ img {
     /* height: 10%; */
     margin-bottom: 30px;
     padding-left: 5px;
-    align: left;
+    box-align: left;
+}
 
 
 
@@ -235,19 +236,19 @@ img {
 
 
 
-    /* ==========================================================================
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 
-    /*
+/*
  * Hide visually and from screen readers
  */
 
-    .hidden {
-        display: none !important;
-    }
+.hidden {
+    display: none !important;
+}
 
-    /*
+/*
  * Hide only visually, but have it available for screen readers:
  * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  *
@@ -256,45 +257,45 @@ img {
  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
  */
 
-    .visuallyhidden {
-        border: 0;
-        clip: rect(0 0 0 0);
-        height: 1px;
-        margin: -1px;
-        overflow: hidden;
-        padding: 0;
-        position: absolute;
-        width: 1px;
-        white-space: nowrap;
-        /* 1 */
-    }
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+    /* 1 */
+}
 
-    /*
+/*
  * Extends the .visuallyhidden class to allow the element
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
 
-    .visuallyhidden.focusable:active,
-    .visuallyhidden.focusable:focus {
-        clip: auto;
-        height: auto;
-        margin: 0;
-        overflow: visible;
-        position: static;
-        width: auto;
-        white-space: inherit;
-    }
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+    white-space: inherit;
+}
 
-    /*
+/*
  * Hide visually and from screen readers, but maintain layout
  */
 
-    .invisible {
-        visibility: hidden;
-    }
+.invisible {
+    visibility: hidden;
+}
 
-    /*
+/*
  * Clearfix: contain floats
  *
  * For modern browsers
@@ -306,110 +307,110 @@ img {
  *    `:before` to contain the top-margins of child elements.
  */
 
-    .clearfix:before,
-    .clearfix:after {
-        content: " ";
-        /* 1 */
-        display: table;
-        /* 2 */
-    }
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
+}
 
-    .clearfix:after {
-        clear: both;
-    }
+.clearfix:after {
+    clear: both;
+}
 
-    /* ==========================================================================
+/* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
 
-    @media only screen and (min-width: 35em) {
-        /* Style adjustments for viewports that meet the condition */
-    }
+@media only screen and (min-width: 35em) {
+    /* Style adjustments for viewports that meet the condition */
+}
 
-    @media print,
-    (-webkit-min-device-pixel-ratio: 1.25),
-    (min-resolution: 1.25dppx),
-    (min-resolution: 120dpi) {
-        /* Style adjustments for high resolution devices */
-    }
+@media print,
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
+}
 
-    /* ==========================================================================
+/* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 
-    @media print {
+@media print {
 
-        *,
-        *:before,
-        *:after {
-            background: transparent !important;
-            color: #000 !important;
-            /* Black prints faster */
-            -webkit-box-shadow: none !important;
-            box-shadow: none !important;
-            text-shadow: none !important;
-        }
+    *,
+    *:before,
+    *:after {
+        background: transparent !important;
+        color: #000 !important;
+        /* Black prints faster */
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
 
-        a,
-        a:visited {
-            text-decoration: underline;
-        }
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
 
-        a[href]:after {
-            content: " ("attr(href) ")";
-        }
+    a[href]:after {
+        content: " ("attr(href) ")";
+    }
 
-        abbr[title]:after {
-            content: " ("attr(title) ")";
-        }
+    abbr[title]:after {
+        content: " ("attr(title) ")";
+    }
 
-        /*
+    /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
 
-        a[href^="#"]:after,
-        a[href^="javascript:"]:after {
-            content: "";
-        }
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+        content: "";
+    }
 
-        pre {
-            white-space: pre-wrap !important;
-        }
+    pre {
+        white-space: pre-wrap !important;
+    }
 
-        pre,
-        blockquote {
-            border: 1px solid #999;
-            page-break-inside: avoid;
-        }
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
 
-        /*
+    /*
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
      */
 
-        thead {
-            display: table-header-group;
-        }
-
-        tr,
-        img {
-            page-break-inside: avoid;
-        }
-
-        p,
-        h2,
-        h3 {
-            orphans: 3;
-            widows: 3;
-        }
-
-        h2,
-        h3 {
-            page-break-after: avoid;
-        }
+    thead {
+        display: table-header-group;
     }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+}
