--- a/css/history.css
+++ b/css/history.css
@@ -115,13 +115,13 @@ body {
 
 body article>p {
     width: 80vw;
-    height: 33vh;
+    height: 20vh;
 }
 
 body article>p {
-    padding-top: 20px;
+    padding-top: 10px;
     padding-right: 60px;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
     padding-left: 5px;
     margin-left: 15px;
     font-size: 2.3vw;
@@ -206,8 +206,8 @@ footer>nav>ul>li {
 img {
     width: 25%;
     height: 25%;
-    margin-bottom: 30px;
-    padding-left: 35vw;
+    margin-bottom: 10px;
+    margin-left: 450px;
     /* vertical-align: center; */
 }
 
